# Algonaut

./: .gitattributes  .gitignore  Cargo.toml  Makefile  Readme.md
client/: .cta.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: styles.css
client/src/app/main/: main-layout.tsx
client/src/components/ui/: dropdown-menu.tsx  profile-image.tsx
client/src/hooks/: use-verify-auth.ts
client/src/integrations/monaco/: theme.ts
client/src/integrations/theme/: theme-switch.tsx
client/src/integrations/ws/: index.ts
client/src/lib/: env.ts  error.ts
client/src/lib/guards/: auth-guards.tsx
client/src/routes/: __root.tsx  _layout.tsx
client/src/store/: auth-store.tsx  theme-store.tsx
common/: Cargo.toml
common/src/: lib.rs
common/src/hashing/: hash.rs
common/src/id/: mod.rs  short_id.rs
common/src/storage/: mod.rs
common/src/types/: files.rs  mod.rs  session.rs
common/src/types/execution/: language.rs  mod.rs  verdict.rs
common/src/types/room/: dto.rs
common/src/types/session/: dto.rs  dto_impl.rs  mod.rs
database/: Cargo.toml
database/migration/: Cargo.toml  Makefile
database/migration/src/: lib.rs  m20250705_172030_create_user_table.rs  m20250706_064538_room.rs  m20250706_075449_create_user_room_table.rs  m20250706_075516_create_executions_table.rs  m20250706_075536_create_chats_table.rs  m20250706_075550_create_transactions_table.rs  m20250706_082017_create_tarsy_interactions_table.rs  m20250706_103110_create_foreign_keys.rs
database/src/: lib.rs
database/src/connect/: connect.rs  mod.rs
database/src/entity/: chat.rs  execution.rs  mod.rs  prelude.rs  room.rs  sea_orm_active_enums.rs  tarsy_interactions.rs  transaction.rs  user.rs  user_room.rs
redis/: Cargo.toml
redis/src/: lib.rs
redis/src/code/: mod.rs
redis/src/connect/: connect.rs  mod.rs
redis/src/session/: mod.rs  session.rs
server/: Cargo.toml
server/src/: health_check.rs  main.rs
server/src/middlewares/: auth_middleware.rs
server/src/routes/: mod.rs  root.rs  verify.rs
server/src/routes/authentication/: auth.rs
server/src/routes/authentication/handlers/: callback.rs  login.rs  mod.rs
server/src/routes/rooms/: mod.rs  routes.rs
server/src/routes/rooms/handlers/: create_room.rs  get_global_rooms.rs  get_room_chats.rs  get_rooms.rs  join_room.rs  mod.rs
server/src/routes/user/: mod.rs  routes.rs
server/src/routes/user/handlers/: get_pre_signed_url.rs  mod.rs
server/src/utils/: app_state.rs  env.rs  mod.rs
server/src/utils/validator/: mod.rs
server/src/utils/web/: errors.rs  mod.rs  response.rs
server/src/websocket/: mod.rs  route.rs
server/src/websocket/handlers/: chat.rs  connection.rs  crdt.rs  error.rs  mod.rs
server/src/websocket/models/: comm.rs  connection.rs  lobby.rs  mod.rs  outgoing.rs
server/src/websocket/models/comm/: incomming.rs  mod.rs  outgoing.rs
worker/: Cargo.toml
worker/src/: main.rs
worker/src/services/: container.rs
(+31 files in other folders)
