[package]
name = "common"
version = "0.1.0"
edition = "2024"
homepage.workspace = true

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
argon2 = "0.5.3"
nanoid = "0.4.0"
rand_core = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.19", features = ["derive"] }
