[package]
name = "database"
version = "0.1.0"
edition = "2024"
homepage.workspace = true

[dependencies]
migration = { version = "0.1.0", path = "migration" }
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "1.1.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"