[package]
name = "server"
version = "0.1.0"
edition = "2024"
homepage.workspace = true

[dependencies]
database = { version = "0.1.0", path = "../database" }
redis = { version = "0.1.0", path = "../redis" }
common = { version = "0.1.0", path = "../common" }

sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
log = "0.4.27"
actix-web = "4"
serde = "1.0.219"
serde_json = "1.0.140"
env_logger = "0.11.8"
dotenv = "0.15.0"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.19", features = ["derive"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde_urlencoded = "0.7.1"
