[package]
name = "server"
version = "0.1.0"
edition = "2024"
homepage.workspace = true

[dependencies]
# package local crates
database = { version = "0.1.0", path = "../database" }
redis = { version = "0.1.0", path = "../redis" }
common = { version = "0.1.0", path = "../common" }

# database
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }

# actix
actix = "0.13.5"
actix-web-actors = "4"
actix-web = { version = "4.11.0", features = ["macros"] }
actix-cors = "0.7.1"
actix-ws = "0.3.0"
futures-util = "0.3.31"

# serialization
serde = "1.0.219"
serde_json = "1.0.140"
validator = { version = "0.19", features = ["derive"] }
serde_urlencoded = "0.7.1"

# utils
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15.0"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
