[package]
name = "container-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
